force-app/main/default/objects/SAC_ImagenDocumento__c/SAC_ImagenDocumento__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena las imágenes que contiene el documento de resolución del proyecto SAC</description>
    <label>Imagen Documento Resolución</label>
    <nameField>
        <displayFormat>IM-{0000000}</displayFormat>
        <label>Imagen Documento Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imagenes Documento Resolución</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>