force-app/main/default/objects/SAC_ImagenDocumento__c/fields/SAC_Caso__c.field-meta.xml
<CustomField>
    <fullName>SAC_Caso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Caso con el que se relacionan las imágenes del documento</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Imagenes Documento Resolución</relationshipLabel>
    <relationshipName>Caso</relationshipName>
    <type>Lookup</type>
</CustomField>