force-app/main/default/objects/SAC_ImagenDocumento__c/fields/SAC_Imagen__c.field-meta.xml
<CustomField>
    <fullName>SAC_Imagen__c</fullName>
    <description>Campo text que almacena la imagen del documento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Imagen</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>