force-app/main/default/objects/SAC_ImagenDocumento__c/fields/SPV_DAN_OficinaAfectada__c.field-meta.xml
<CustomField>
    <fullName>SPV_DAN_OficinaAfectada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DAN de la oficina afectada que se ha establecido en su correspondiente campo de este objeto.</description>
    <label>DAN de la oficina afectada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imagenes Documento Resolución (DAN de la oficina afectada)</relationshipLabel>
    <relationshipName>Imagenes_Documento_Resoluci_n1</relationshipName>
    <type>Lookup</type>
</CustomField>