force-app/main/default/objects/SAC_ImagenDocumento__c/fields/SPV_OficinaAfectada_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SPV_OficinaAfectada_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Almacena una de las oficinas afectadas relacionadas con la reclamación</description>
    <label>Oficina Afectada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imagenes Documento Resolución</relationshipLabel>
    <relationshipName>Imagenes_Documento_Resoluci_n</relationshipName>
    <type>Lookup</type>
</CustomField>