force-app/main/default/objects/SAC_ImagenDocumento__c/recordTypes/SAC_ImagenDocumento.recordType-meta.xml
<RecordType>
    <fullName>SAC_ImagenDocumento</fullName>
    <active>true</active>
    <description>Record type para las imágenes del documento de resolución del proyecto SAC</description>
    <label>Imagen SAC</label>
</RecordType>