force-app/main/default/objects/SAC_ImagenDocumento__c/recordTypes/SPV_OficinaAfectada.recordType-meta.xml
<RecordType>
    <fullName>SPV_OficinaAfectada</fullName>
    <active>true</active>
    <description>Record type para cuando funcione como objeto intermedio  que relaciona cada reclamación con sus oficinas afectadas</description>
    <label>Oficina Afectada SPV</label>
</RecordType>